--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,8 +3,8 @@
 
   <title>{{site.title}}</title>
 
-  <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-  <meta name="author" content="Hakim El Hattab">
+  <meta name="description" content="STA lection1: Neufund review">
+  <meta name="author" content="Alexander Gryaznov">
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
